tests/error/array_errors/linear_index.err
Guppy compilation failed. Error in file $FILE:14

12:    @guppy(module)
13:    def main(qs: array[qubit, 42]) -> int:
14:        return qs[0]
                  ^^
GuppyTypeError: Cannot instantiate non-linear type variable `T` in type `forall n, T: nat. (array[T, n], int) -> T` with linear type `qubit`
